--- a/setup.cfg
+++ b/setup.cfg
@@ -14,11 +14,11 @@
 ##############################################################################
 
 [metadata]
-name = commission_aep
-version = attr: commission_aep.__version__
+name = aep_to_ttn_mlinux
+version = attr: aep_to_ttn_mlinux.__version__
 
 [options]
-packages = commission_aep
+packages = aep_to_ttn_mlinux
 
 install_requires =
     requests >= 2.31.0
@@ -27,8 +27,8 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    commission_aep = commission_aep.__main__:main
+    aep_to_ttn_mlinux = aep_to_ttn_mlinux.__main__:main
 
 [options.package_data]
-commission_aep =
+aep_to_ttn_mlinux =
     *.json
