setup.cfg requirements track requirements.txt

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ packages = aep_to_ttn_mlinux
 
 install_requires =
     requests >= 2.31.0
+    urllib3 >= 2.0.7
+    fabric >= 3.2.2
 
 # include_package_data = True
 
